SDKs/twilio.com/twilio_serverless_v1/1.39.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_serverless_v1/1.39.1/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CreateAssetRequest{
        Security: operations.CreateAssetSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        PathParams: operations.CreateAssetPathParams{
            ServiceSid: "unde",
        },
        Request: &operations.CreateAssetCreateAssetRequest{
            FriendlyName: "deserunt",
        },
    }

    ctx := context.Background()
    res, err := s.CreateAsset(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.ServerlessV1ServiceAsset != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateAsset` - Create a new Asset resource.
* `CreateBuild` - Create a new Build resource. At least one function version or asset version is required.
* `CreateDeployment` - Create a new Deployment.
* `CreateEnvironment` - Create a new environment.
* `CreateFunction` - Create a new Function resource.
* `CreateService` - Create a new Service resource.
* `CreateVariable` - Create a new Variable.
* `DeleteAsset` - Delete an Asset resource.
* `DeleteBuild` - Delete a Build resource.
* `DeleteEnvironment` - Delete a specific environment.
* `DeleteFunction` - Delete a Function resource.
* `DeleteService` - Delete a Service resource.
* `DeleteVariable` - Delete a specific Variable.
* `FetchAsset` - Retrieve a specific Asset resource.
* `FetchAssetVersion` - Retrieve a specific Asset Version.
* `FetchBuild` - Retrieve a specific Build resource.
* `FetchBuildStatus` - Retrieve a specific Build resource.
* `FetchDeployment` - Retrieve a specific Deployment.
* `FetchEnvironment` - Retrieve a specific environment.
* `FetchFunction` - Retrieve a specific Function resource.
* `FetchFunctionVersion` - Retrieve a specific Function Version resource.
* `FetchFunctionVersionContent` - Retrieve a the content of a specific Function Version resource.
* `FetchLog` - Retrieve a specific log.
* `FetchService` - Retrieve a specific Service resource.
* `FetchVariable` - Retrieve a specific Variable.
* `ListAsset` - Retrieve a list of all Assets.
* `ListAssetVersion` - Retrieve a list of all Asset Versions.
* `ListBuild` - Retrieve a list of all Builds.
* `ListDeployment` - Retrieve a list of all Deployments.
* `ListEnvironment` - Retrieve a list of all environments.
* `ListFunction` - Retrieve a list of all Functions.
* `ListFunctionVersion` - Retrieve a list of all Function Version resources.
* `ListLog` - Retrieve a list of all logs.
* `ListService` - Retrieve a list of all Services.
* `ListVariable` - Retrieve a list of all Variables.
* `UpdateAsset` - Update a specific Asset resource.
* `UpdateFunction` - Update a specific Function resource.
* `UpdateService` - Update a specific Service resource.
* `UpdateVariable` - Update a specific Variable.
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
